feat(task 4): Use database to fetch data, add adProduct lambda

--- a/product-service/serverless.yaml
+++ b/product-service/serverless.yaml
@@ -29,3 +29,10 @@ functions:
           method: get
           path: 'products/{id}'
           cors: true
+  addProduct:
+    handler: handler.addProduct
+    events:
+      - http:
+          method: post
+          path: 'products'
+          cors: true
