--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,14 +13,15 @@
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
-    "@types/node": "^18.11.0",
     "@types/aws-lambda": "^8.10.17",
     "@types/jest": "^26.0.15",
+    "@types/node": "^18.11.0",
     "@types/serverless": "^1.72.5",
     "aws-lambda": "^1.0.7",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.1",
     "serverless": "^3.20.0",
+    "serverless-dotenv-plugin": "^4.0.2",
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^5.3.3",
