--- a/product-service/serverless.yaml
+++ b/product-service/serverless.yaml
@@ -6,6 +6,8 @@ custom:
     includeModules: true
 plugins:
   - serverless-webpack
+  - serverless-dotenv-plugin
+useDotenv: true
 provider:
   name: aws
   runtime: nodejs14.x
@@ -14,6 +16,12 @@ provider:
   profile: personalAccount
   apiGateway:
     minimumCompressionSize: 1024
+  environment:
+    PG_PORT: ${env:PG_PORT}
+    PG_DATABASE: ${env:PG_DATABASE}
+    PG_USERNAME: ${env:PG_USERNAME}
+    PG_PASSWORD: ${env:PG_PASSWORD}
+    PG_HOST: ${env:PG_HOST}
 functions:
   getProductsList:
     handler: handler.getProductsList
