--- a/import-service/package.json
+++ b/import-service/package.json
@@ -8,6 +8,8 @@
     "deploy": "serverless deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.199.0",
+    "@aws-sdk/s3-request-presigner": "^3.199.0",
     "aws-sdk": "^2.791.0",
     "csv-parser": "^2.3.3",
     "node-fetch": "^2.6.1",
@@ -22,6 +24,7 @@
     "aws-sdk-mock": "^5.1.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.1",
+    "jest-mock-extended": "^3.0.1",
     "serverless": "^3.23.0",
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^26.4.3",
