feat(task 5): Add sqs and sns, save product in db

--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -12,7 +12,7 @@ plugins:
 useDotenv: true
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   stage: dev
   region: eu-west-1
   profile: personalAccount
@@ -25,6 +25,8 @@ provider:
     PG_DATABASE: "${env:PG_DATABASE}"
     PG_USERNAME: "${env:PG_USERNAME}"
     PG_PASSWORD: "${env:PG_PASSWORD}"
+    SQS_URL: !Ref SQSQueue
+    SNS_ARN: !Ref SNSTopic
   iamRoleStatements:
   - Effect: Allow
     Action: s3:ListBucket
@@ -35,6 +37,47 @@ provider:
     - s3:*
     Resource:
     - arn:aws:s3:::node-in-aws-s3-pz/*
+  - Effect: Allow
+    Action:
+    - sqs:*
+    Resource:
+    - Fn::GetAtt:
+      - SQSQueue
+      - Arn
+  - Effect: Allow
+    Action:
+    - sns:*
+    Resource:
+      Ref: SNSTopic
+resources:
+  Resources:
+    SQSQueue:
+      Type: AWS::SQS::Queue
+      Properties:
+        QueueName: catalogItemsQueue
+    SNSTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        TopicName: createProductTopic
+    SNSSubscription:
+      Type: AWS::SNS::Subscription
+      Properties:
+        Endpoint: pavel_zaletski@epam.com
+        Protocol: email
+        TopicArn:
+          Ref: SNSTopic
+    SNSSubscriptionAdditional:
+      Type: AWS::SNS::Subscription
+      Properties:
+        Endpoint: pavel.zaletski.aws@gmail.com
+        Protocol: email
+        TopicArn:
+          Ref: SNSTopic
+        FilterPolicy:
+          price:
+          - numeric:
+            - ">="
+            - 50
 
 functions:
   importProductsFile:
@@ -53,3 +96,12 @@ functions:
             - prefix: uploaded/
               suffix: ".csv"
           existing: true
+  catalogBatchProcess:
+    handler: handler.catalogBatchProcess
+    events:
+      - sqs:
+          batchSize: 5
+          arn:
+            Fn::GetAtt:
+              - SQSQueue
+              - Arn
